==> morpheby/esp32_can/src/ch32v203_can_builtin.cpp <==
#include "Arduino.h"
#include "ch32v203_can_builtin.h"
#include "ch32v20x_can.h"
#include "spdlog/spdlog.h"
#define SPDLOG_DEBUG
#define CAN_CLOCK_FREQ (SYSCLK_FREQ_144MHz_HSI)/2
#define CAN_BRP_FROM_RESOLUTION_HZ(freq) ((CAN_CLOCK_FREQ)/(freq))
#define CAN_TIMING_CONFIG(quanta_hz, ts1, ts2, sjw_v) {.brp = CAN_BRP_FROM_RESOLUTION_HZ((quanta_hz)), .tseg_1 = (ts1) - 1, .tseg_2 = (ts2) - 1, .sjw = (sjw_v) - 1}
#define CAN_TIMING_CONFIG_NULL      CAN_TIMING_CONFIG(CAN_CLOCK_FREQ, 1, 1, 1)
#define CAN_TIMING_CONFIG_10KBITS       CAN_TIMING_CONFIG(160000, 13, 2, 1)
#define CAN_TIMING_CONFIG_20KBITS       CAN_TIMING_CONFIG(320000, 13, 2, 1)
#define CAN_TIMING_CONFIG_50KBITS       CAN_TIMING_CONFIG(800000, 13, 2, 1)
#define CAN_TIMING_CONFIG_100KBITS      CAN_TIMING_CONFIG(1600000, 13, 2, 1)
#define CAN_TIMING_CONFIG_125KBITS      CAN_TIMING_CONFIG(2000000, 13, 2, 1)
#define CAN_TIMING_CONFIG_250KBITS      CAN_TIMING_CONFIG(4000000, 13, 2, 1)
#define CAN_TIMING_CONFIG_500KBITS      CAN_TIMING_CONFIG(8000000, 12, 3, 2)
#define CAN_TIMING_CONFIG_800KBITS      CAN_TIMING_CONFIG(16000000, 14, 5, 3)
#define CAN_TIMING_CONFIG_1MBITS        CAN_TIMING_CONFIG(16000000, 11, 4, 3)

void CH32CAN::setTXBufferSize(int newSize)
{
    txBufferSize = newSize;
}

uint32_t CH32CAN::init(uint32_t ul_baudrate)
{


    #ifdef SPDLOG_DEBUG
    auto log = spdlog::get("CAN");
    if(log == nullptr)
        log = spdlog::default_logger();
    #endif

    GPIO_InitTypeDef      GPIO_InitStructure = {0};

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOA, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
    GPIO_Init(GPIOA, &GPIO_InitStructure);

    // Enable 5V pull-up (required for 5V CAN Transceivers that have no internal pull-up)
    // EXTEN->EXTEN_CTR = (EXTEN->EXTEN_CTR & (~EXTEN_USBD_LS) | EXTEN_USBD_PU_EN);

    NVIC_EnableIRQ(USB_HP_CAN1_TX_IRQn);
    NVIC_EnableIRQ(USB_LP_CAN1_RX0_IRQn);
    NVIC_EnableIRQ(CAN1_RX1_IRQn);
    NVIC_EnableIRQ(CAN1_SCE_IRQn);
    
    set_baudrate(ul_baudrate);

    readyForTraffic = true;
    return ul_baudrate;
}

uint32_t CH32CAN::beginAutoSpeed()
{
    CANTimingConfig_t oldMode = currentTimingConfig;

    readyForTraffic = false;
    
    bool oldListenMode = listenOnlyMode;
    setListenOnlyMode(true);

    int idx = 0;
    while (valid_timings[idx].speed != 0)
    {
        disable();
        currentTimingConfig = valid_timings[idx].cfg;

        #ifdef SPDLOG_DEBUG
        log->info(FMT_STRING("Autospeed, trying {}"), (int) valid_timings[idx].speed);
        #endif

        enable();
        delay(600); //wait a while
        if (cyclesSinceTraffic < 2) //only would happen if there had been traffic
        {
            setListenOnlyMode(oldListenMode);
            #ifdef SPDLOG_DEBUG
            log->info("Autospeed success");
            #endif
            return valid_timings[idx].speed;
        }
        else
        {
            currentTimingConfig = oldMode;
            #ifdef SPDLOG_DEBUG
            log->info("Autospeed failed");
            #endif
        }
        idx++;
    }

    #ifdef SPDLOG_DEBUG
    log->info("Could not complete autospeed");
    #endif

    disable();
    return 0;
}

uint32_t CH32CAN::set_baudrate(uint32_t ul_baudrate)
{
    disable();

    //now try to find a valid timing to use
    int idx = 0;
    while (valid_timings[idx].speed != 0)
    {
        if (valid_timings[idx].speed == ul_baudrate)
        {
            currentTimingConfig = valid_timings[idx].cfg;

            enable();

            return ul_baudrate;
        }
        idx++;
    }

    #ifdef SPDLOG_DEBUG
    log->error("Invalid bit timing specified");
    #endif
    return 0;
}

void CH32CAN::setListenOnlyMode(bool state)
{
    disable();
    listenOnlyMode = state;
    enable();
}

void CH32CAN::enable()
{
    CAN_InitTypeDef CAN_InitStructure = {
        .CAN_Prescaler = currentTimingConfig.brp,
        .CAN_Mode = CAN_Mode_Normal,
        .CAN_SJW = currentTimingConfig.sjw,
        .CAN_BS1 = currentTimingConfig.tseg_1,
        .CAN_BS2 = currentTimingConfig.tseg_2,
        .CAN_TTCM = DISABLE,    // Don't use TTCAN
        .CAN_ABOM = DISABLE,    // Manually reset bus after error
        .CAN_AWUM = DISABLE,    // Manually wake-up from sleep
        // .CAN_NART = ENABLE,     // Don't resend messages automatically
        .CAN_NART = DISABLE,     // Resend messages automatically
        .CAN_RFLM = ENABLE,     // When the receiving FIFO overflows, don't receive new messages
        .CAN_TXFP = ENABLE,    // Send priority is determined by the message identifier
    };

    rx_queue = xQueueCreate(rxBufferSize, sizeof(CAN_FRAME));
    tx_queue = xQueueCreate(txBufferSize, sizeof(CAN_FRAME));
    
#if configSUPPORT_STATIC_ALLOCATION
    CAN_Tx_handler_task = xTaskCreateStatic(CAN_Tx_handler, "CAN_TX", sizeof(CAN_Tx_task_stack) / sizeof(StackType_t),
        this, configMAX_PRIORITIES - 1, CAN_Tx_task_stack, &CAN_Tx_task);

#if !defined(CAN_RX_ON_MAIN_LOOP)
    CAN_Rx_handler_task = xTaskCreateStatic(CAN_Rx_handler, "CAN_RX", sizeof(CAN_Tx_task_stack) / sizeof(StackType_t),
        this, configMAX_PRIORITIES - 1, CAN_Rx_task_stack, &CAN_Rx_task);
#endif
#else
    xTaskCreate(CAN_Tx_handler, "CAN_TX", 128, this, configMAX_PRIORITIES - 1, &CAN_Tx_handler_task);
#if !defined(CAN_RX_ON_MAIN_LOOP)
    xTaskCreate(CAN_Rx_handler, "CAN_RX", 256, this, configMAX_PRIORITIES - 1, &CAN_Rx_handler_task);
#endif
#endif
    
    if (CAN_Init(CAN1, &CAN_InitStructure) != CAN_InitStatus_Success) {
        #ifdef SPDLOG_DEBUG
        log->info("Failed to setup CAN");
        #endif
        return;
    }
    CAN_DBGFreeze(CAN1, DISABLE);
    CAN_WakeUp(CAN1);
    
    CAN_ITConfig(CAN1, CAN_IT_BOF | CAN_IT_SLK | CAN_IT_EPV | CAN_IT_ERR | CAN_IT_FMP0 | CAN_IT_FMP1 | CAN_IT_FF0 | CAN_IT_FF1 | CAN_IT_TME, ENABLE);
    if (debuggingMode)
    {
        CAN_ITConfig(CAN1, CAN_IT_LEC | CAN_IT_ERR | CAN_IT_FOV0 | CAN_IT_FOV1, ENABLE);
    }
    
    readyForTraffic = true;
}

void CH32CAN::disable()
{
    readyForTraffic = false;

    CAN_DeInit(CAN1);

    if (CAN_Tx_handler_task != NULL)
    {
        vTaskDelete(CAN_Tx_handler_task);
        CAN_Tx_handler_task = NULL;
    }
#if !defined(CAN_RX_ON_MAIN_LOOP)
    if (CAN_Rx_handler_task != NULL)
    {
        vTaskDelete(CAN_Rx_handler_task);
        CAN_Rx_handler_task = NULL;
    }
#endif

    if (rx_queue) {
        vQueueDelete(rx_queue);
        rx_queue = NULL;
    }
    if (tx_queue) {
        vQueueDelete(tx_queue);
        tx_queue = NULL;
    }
}

bool CH32CAN::processFrame(CAN_FRAME &frame, uint8_t filter_id)
{
    CANListener *thisListener;

    cyclesSinceTraffic = 0; //reset counter to show that we are receiving traffic

    if (!readyForTraffic) {
        return false;
    }

    //frame is accepted, lets see if it matches a mailbox callback
    if (cbCANFrame[filter_id])
    {
        (*cbCANFrame[filter_id])(&frame);
    }
    
    for (int listenerPos = 0; listenerPos < SIZE_LISTENERS; listenerPos++)
    {
        thisListener = listener[listenerPos];
        if (thisListener != NULL)
        {
            if (thisListener->isCallbackActive(filter_id)) 
            {
                thisListener->gotFrame(&frame, filter_id);
                return true;
            }
            else if (thisListener->isCallbackActive(numFilters)) //global catch-all 
            {
                thisListener->gotFrame(&frame, 0xFF);
                return true;
            }
        }
    }
    
    if (cbGeneral)
    {
        (*cbGeneral)(&frame);
    }

    #ifdef SPDLOG_DEBUG
    SPDLOG_LOGGER_TRACE(log, FMT_STRING("Frame processed at filter {:x}"), (int) filter_id);
    #endif

    return true;
}

bool CH32CAN::sendFrame(CAN_FRAME const &txFrame)
{
    if (!readyForTraffic) return false;
    return xQueueSend(tx_queue, &txFrame, pdMS_TO_TICKS(4)) == pdTRUE;
}
